# gem-farm

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
app/: .eslintrc.js  package.json  public
app/gem-bank/: .eslintrc.js  README.md  package.json
app/gem-farm/: .eslintignore  .eslintrc.js  package-lock.json  package.json  tsconfig.json  vue.config.js
app/public/: gem_bank.json  index.html
app/src/: App.vue  globals.ts
gem-farm/: tailwind.config.js
gem-farm/public/: gem_farm.json
gem-farm/src/: App.vue
lib/gem_common/: Cargo.toml
lib/gem_common/src/: account.rs  errors.rs  lib.rs  math.rs  try_math.rs  util.rs
lib/gem_common/src/math/: functions.rs  mod.rs  number.rs  number128.rs  try_math.rs
lib/proc_macros/: Cargo.toml
libraries/math/: Cargo.toml
libraries/proc-macros/: Cargo.toml
libraries/ts/: package.json  tsconfig.json
libraries/utils/: cli.ts
migrations/: deploy.js
programs/core/: Cargo.toml
programs/core/src/: lib.rs
programs/core/src/instructions/: init_shardr.rs  init_vault.rs  mod.rs
programs/core/src/state/: mod.rs  shardr.rs  vault.rs
programs/gem-bank/: Cargo.toml
programs/gem_bank/: Cargo.toml
programs/gem_bank/src/: errors.rs  lib.rs
programs/gem_bank/src/instructions/: add_to_whitelist.rs  clean_vault.rs  deposit_gem.rs  deposit_gem_pnft.rs  init_bank.rs  init_vault.rs  mod.rs  record_rarity_points.rs  remove_from_whitelist.rs  set_bank_flags.rs  set_vault_lock.rs  shared.rs  update_bank_manager.rs  update_vault_owner.rs  withdraw_gem.rs  withdraw_gem_pnft.rs  withdraw_token_vault.rs  withdraw_tokens_auth.rs  withdraw_tokens_vault.rs
programs/gem_bank/src/state/: bank.rs  gem_deposit_receipt.rs  mod.rs  rarity.rs  vault.rs  whitelist_proof.rs
programs/gem_bank/src/utils/: math.rs
programs/gem_farm/: Cargo.toml
programs/gem_farm/src/: errors.rs  lib.rs  number128.rs
programs/gem_farm/src/instructions/: add_funder.rs  add_rarities_to_bank.rs  add_to_bank_whitelist.rs  authorize_funder.rs  cancel_reward.rs  claim.rs  deauthorize_funder.rs  defund.rs  flash_deposit.rs  flash_deposit_pnft.rs  fund.rs  fund_reward.rs  init_farm.rs  init_farmer.rs  lock_funding.rs  lock_reward.rs  mod.rs  rarity_proxy.rs  record_multiple_rarities.rs  record_rarity.rs  refresh_farmer.rs  refresh_farmer_signed.rs  remove_from_bank_whitelist.rs  remove_funder.rs  stake.rs  treasury_payout.rs  unstake.rs  update_farm.rs
programs/gem_farm/src/rewards/: mod.rs  variable_rate.rs
programs/gem_farm/src/state/: authorization_proof.rs  farm.rs  farmer.rs  fixed_rewards.rs  fixed_rewards_OLD.rs  funding_receipt.rs  mod.rs  reward_deposit_receipt.rs  rewards_deposit_receipt.rs  variable_rewards.rs
programs/shardr/: Cargo.toml
programs/test-writer/: Cargo.toml
programs/test-writer/src/: lib.rs
scripts/: cp_idl.sh  get_pk.sh  looper.sh  update_fe.sh
sdk/: package.json  tsconfig.json
sdk/src/: .gitignore  gem-bank.client.ts  gem-farm.client.ts  index.ts
solana-wallet/: id.json
solana-wallet/solana/: id.json
src/: App.vue  index.ts  main.ts
src/components/: ArrowButton.vue  ConfigPane.vue  NavButton.vue
src/composables/: cluster.ts
src/gem-bank/: gem-bank.client.ts  index.ts
src/gem-common/: account-utils.ts  browser-wallet.ts  index.ts  node-wallet.ts  pnft.ts  types.ts
src/gem-farm/: gem-farm.client.ts  index.ts
src/router/: index.ts
src/types/: gem_bank.ts  gem_farm.ts
src/views/: Farmer.vue  Manager.vue
src//: gem_bank.ts
tests/: gem_bank.spec.ts  metaplex.ts  shardd.spec.ts
tests/artifacts/: testMetadata.json
tests/gem-bank/: gem-bank.client.ts  gem-bank.looper.test.js  gem-bank.looper.test.ts  gem-bank.looper.ts  gem-bank.pnft.ts  gem-bank.spec.js  gem-bank.spec.ts  gem-bank.test.ts  gem-bank.ts  gem-clean-vault.test.ts  withdraw-token-vault.test.ts  withdraw-tokens-auth.test.ts  withdraw-tokens-vault.test.ts
tests/gem-common/: account.ts  browser-wallet.ts  node-wallet.ts  types.ts
tests/gem-farm/: gem-farm.boring.spec.ts  gem-farm.client.ts  gem-farm.common.ts  gem-farm.core.spec.ts  gem-farm.farmer-lifecycle.test.ts  gem-farm.fixed_rewards.spec.ts  gem-farm.misc.test.ts  gem-farm.spec.ts  gem-farm.tester.js  gem-farm.tester.ts  gem-farm.variable_rewards.spec.ts
tests/utils/: account.ts  bank.ts  data.ts  gem-common.ts  index.ts  metaplex.ts  (+1 more)
(+185 files in other folders)
