[package]
name = "gem_common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
uint = "0.9.1"
thiserror = "1.0.30"
static_assertions = "1.1.0"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }