[package]
name = "gem_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
thiserror = "1.0.30"
static_assertions = "1.1.0"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }