[package]
name = "shardd"
version = "0.1.0"
description = "shardd NFTs on solana"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "shardd"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
bitflags = "1.3.2"
bytemuck = "1.7.2"
static_assertions = "1.1.0"
jet-math = { path = "../../libraries/math" }
jet-proc-macros = { path = "../../libraries/proc-macros" }