[package]
name = "gem_bank"
version = "0.1.0"
description = "securely store your NFTs"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gem_bank"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
bitflags = "1.3.2"
bytemuck = "1.7.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }