[package]
name = "gem_bank"
version = "0.1.0"
description = "safely store and manage your gem collection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gem_bank"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
bitflags = "1.3.2"
bytemuck = "1.7.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
gem_common = {path='../../lib/gem_common'}
proc_macros = {path='../../lib/proc_macros'}
arrayref = "0.3.6"