[package]
description = "safely store and manage your gem collection"
edition = "2021"
name = "gem_bank"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
name = "gem_bank"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
arrayref = "0.3.6"
bitflags = "1.3.2"
bytemuck = "1.7.2"
gem_common = { path = '../../lib/gem_common' }
mpl-token-auth-rules = "1.1.0"
mpl-token-metadata = { version = "1.8.1", features = ["no-entrypoint"] }
proc_macros = { path = '../../lib/proc_macros' }
static_assertions = "1.1.0"
thiserror = "1.0.30"
